<resources>
    <string name="app_name" translatable="false">TypeGo</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title_activity_type" translatable="false">TypeActivity</string>
    <string name="button_StartTest">Start!</string>
    <string name="button_Profile">My profile</string>
    <string name="words_per_minute">Words Per Minute</string>
    <string name="previous_result">Previous result</string>
    <string name="last">Last</string>
    <string name="best">Best</string>
    <string name="characters">Characters</string>
    <string name="words">Words</string>
    <string name="best_result">Best result</string>
    <string name="incorrect_words">Incorrect words</string>
    <string name="_continue">Continue</string>
    <string name="correct_words">Correct words</string>
    <string name="input_text_above">Input words here</string>
    <string name="time_left">Time left</string>
    <string name="current_version">Version %1$s</string>
    <string name="words_loading_error_occurred">An error occurred while initializing words dictionary</string>
    <string name="test_setup_seconds">s.</string>
    <string name="test_setup_minutes">m.</string>
    <string name="enhanced">Enhanced</string>
    <string name="basic">Basic</string>
    <string name="dictionary">Dictionary</string>
    <string name="time">Time</string>
    <string name="testing">Testing</string>
    <string name="amount_of_time">Amount of time</string>
    <string name="dictionary_type">Dictionary type</string>
    <string name="predictive_text">Predictive text</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="saving_results_error_occurred">An error occurred while saving the results</string>
    <string name="sign_in_to_save_results">To save results you need to sign in</string>
    <string name="dialog_exit_test">Do you want to stop the test?</string>
    <string name="exit">Exit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="continue_testing">Do you want to continue the test?</string>
    <string name="selected_language">Language</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="i_do_not_have_an_account"><u>I don\'t have an account</u></string>
    <string name="text_suggestions">Text suggestions</string>
    <string name="text_suggestions_enabled">Text suggestions are enabled.</string>
    <string name="text_suggestions_disabled">Text suggestions are disabled. Mention: not every keyboard supports this option.</string>
    <string name="msg_results_with_zero_wpm">Results with 0 WPM are not recording.</string>
    <string name="language">Language</string>
    <string name="start_over">Start over</string>
    <string name="finish">Finish</string>
    <string name="assessment">My results</string>
    <string name="average_wpm">Average WPM</string>
    <string name="last_result">Last result</string>
    <string name="tests_passed">Tests passed</string>
    <string name="my_account">My account</string>
    <string name="time_over" translatable="false">00:00</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>
    <string name="history">History</string>
    <string name="WPM">WPM</string>
    <string name="msg_nothing_to_show">Nothing to show yet.\nGo pass some tests!</string>
    <string name="msg_average_wpm_unavailable">Average WPM will be available after you pass 5 tests</string>
    <string name="new_best_result">New best result!</string>
    <string name="ALL">All</string>
    <string name="achievements">Achievements</string>
    <string name="check_achievements">Check achievements</string>
    <string name="check_achievements_with_count">Check achievements (+%1$d)</string>
    <string name="custom_test">Custom test</string>
    <string name="basic_test">Basic test</string>
    <string name="profile">Profile</string>
    <string name="basic_test_desc">Start a 1 minute test with basic dictionary and see how much WPM you will get!</string>
    <string name="custom_test_desc">Set up your own game with enhanced settings!</string>
    <string name="profile_desc">Statistics, passed tests, and achievements are here!</string>
    <string name="screen_orientation">Orientation</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="previous_result_pl">Previous result: %1$d</string>
    <string name="best_result_pl">Best result: %1$d</string>
    <string name="correct_words_pl">Correct words: %1$d</string>
    <string name="incorrect_words_pl">Incorrect words: %1$d</string>
    <string name="dictionary_pl">Dictionary: %1$s</string>
    <string name="wpm_pl">WPM: %1$d</string>
    <string name="results_wpm_pl" translatable="false">%1$d</string>
    <string name="chosen_time_pl">Chosen time: %1$s</string>
    <string name="time_spent_pl">Time spent: %1$s</string>
    <string name="selected_language_pl">Language: %1$s</string>
    <string name="text_suggestions_pl">Text suggestions: %1$s</string>
    <string name="screen_orientation_pl">Orientation: %1$s</string>
    <string name="tests_passed_pl">Tests passed: %1$d</string>
    <string name="average_wpm_pl">Average WPM: %1$d</string>
    <string name="msg_passed_tests_information">Tap to watch details.</string>
    <string name="correct_chars_pl">Correct characters: %1$d</string>
    <string name="correct_characters">Correct characters</string>
    <string name="close">Close</string>
    <string name="typed_words_log">Typed words list</string>
    <string name="check_words_log">Check words log</string>
    <string name="typed_words_log_description">Words that you\'ve typed are on the left and actual ones are on the right.</string>
    <string name="leave_a_feedback">Leave a feedback</string>
    <string name="typed_words_log_disabled">The list is only available in a test that you just passed.</string>
    <string name="activate">Activate</string>
    <string name="stats_wpm_pl">%1$d WPM</string>
    <string name="progression">progression</string>
    <string name="stats_progression_pl" translatable="false">%1$d(p)</string>
    <string name="stats_days_since_first_test_pl">%1$d days with us since the first test!</string>
    <string name="stats_words_written_total_pl">%1$d words written in total</string>
    <string name="stats_accuracy_pl">%1$d(p) accuracy</string>
    <string name="stats_total_minutes_of_testing_pl" formatted="true">%1$d minutes of testing</string>
    <string name="stats_avg_result_in_the_past">Avg. result in the past</string>
    <string name="stats_avg_result_now">Avg. result now</string>
    <string name="stats_time_mode_pl">Time mode: %1$s</string>
    <string name="stats_language_pl">Language: %1$s</string>
    <string name="stats_achievements_done_pl">Achievements done: %1$d/%2$d</string>
    <string name="stats_last_earned_achievement_pl">Last earned achievement: %1$s</string>
    <string name="stats_favorites_header">Your favorites</string>
    <string name="msg_stats_not_enough_information">Pass at least one test so we can show you statistics!</string>
    <string name="my_statistics">My statistics</string>
    <string name="statistics">Statistics</string>
    <string name="stats_locked_cards">Some cards are still locked. Pass more tests to unlock them! Cards left: %1$d</string>
    <string name="cpm_pl">%1$d chars per minute</string>
    <string name="whats_new_pl">%1$s: what\'s new</string>
    <string name="whats_new">What\'s new</string>
    <string name="whats_new_description">See what\'s new in this version of the app.</string>
    <string name="previous_versions">Previous versions</string>
    <string name="text_suggestions_note">It also depends on your keyboard settings.</string>
    <string name="dictionary_type_note">The basic dictionary is limited to 200 words.</string>
    <string name="favorite_language_description_pl">%1$d out of %2$d tests are completed in this language.</string>
    <string name="favorite_timemode_description_pl">%1$d out of %2$d tests are completed in this time mode.</string>
    <string name="stats_best_result" translatable="false">%1$d</string>
    <string name="stats_best_result_description">is your current record!</string>
    <string name="stats_best_result_set_time">It\'s been set %1$d days ago</string>
    <string name="content_desc_basic_test">Start a basic test</string>
    <string name="content_desc_custom_test">Custom test</string>
    <string name="content_desc_my_profile">My profile</string>
    <string name="content_desc_language_select">Select a language</string>
    <string name="content_desc_test_restart">Restart the test</string>
    <string name="error_navigation_to_achievements">Unable to navigate to the achievement section.</string>
    <string name="error_achievement_migration_failed">Failed to transfer achievements from the previous version.</string>
    <string name="error_results_migration_failed">Failed to transfer results from the previous version.</string>
    <string name="message_no_previous_games">No previous games at the moment.</string>
    <string name="replay">Replay</string>
    <string name="replay_description">Replay with the previous game settings.</string>
    <string name="check">Check</string>
    <string name="play">Play</string>
    <string name="customize">Customize</string>
    <string name="label_new" translatable="false">New</string>
    <string name="items">Items</string>
    <string name="msg_no_previous_games">No previous games at the moment.</string>
    <string name="undefined">Undefined</string>
    <string name="avg_result">Avg. WPM</string>
    <string name="date_pl">Date: %1$s</string>
    <string name="error_best_result_not_found">Best result not found.</string>
    <string name="seed">Seed</string>
    <string name="seed_pl">Seed: %1$s</string>
    <string name="seed_hint">Any value</string>
    <string name="seed_description">This setting enables you to have the same order of generated words. Leave blank to have a random generation.</string>
    <string name="seed_copy_hint">Long press to copy.\nSeed: %1$s</string>
    <string name="text_copy_hint">Long press to copy.\nText: %1$s</string>
    <string name="seed_copied">Seed has been copied.</string>
    <string name="text_copied">Text has been copied.</string>
    <string name="seed_not_set">Seed is not set.</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="your_text">Text</string>
    <string name="paste_your_text">Paste your text here.</string>
    <string name="random_words">Random words</string>
    <string name="own_text">Own text</string>
    <string name="paste">Paste</string>
    <string name="accuracy">Accuracy</string>
    <string name="no_last_results" />
    <string name="current_to_last_wpm_more">%1$d WPM more than last time.</string>
    <string name="current_to_last_wpm_less">%1$d WPM less than last time.</string>
    <string name="current_to_last_wpm_same">The same WPM as last time.</string>
    <string name="current_to_best_wpm_more">%1$d WPM more than last set record.</string>
    <string name="current_to_best_wpm_less">%1$d WPM less than last set record.</string>
    <string name="current_to_best_wpm_same">The same WPM as last set record.</string>
    <string name="per_minute">per minute.</string>
    <string name="correct_words_out_of_total">%1$d of them are correct.</string>
    <string name="error_setup_user_text_too_small">Provide at least %1$d words</string>
</resources>