<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/typego_scrollbars"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:theme="@style/TypeGo.Green"
    tools:context=".gamesetup.presentation.RandomWordsGameSetupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <androidx.cardview.widget.CardView
            style="@style/typego_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/submenu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/language"
                    app:drawableStartCompat="@drawable/ic_globe" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_background"
                    android:padding="2dp">

                    <com.tetsoft.typego.core.ui.LanguageSpinner
                        android:id="@+id/language_selection"
                        android:layout_width="200dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/content_desc_language_select"
                        android:paddingHorizontal="4dp"
                        android:paddingVertical="1dp"
                        tools:ignore="TouchTargetSizeCheck" />
                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/typego_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    style="@style/submenu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/time"
                    app:drawableStartCompat="@drawable/ic_clock" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipChildren="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.tetsoft.typego.gamesetup.presentation.TimeModeSlider
                        android:id="@+id/timemode_slider"
                        android:layout_width="200dp"
                        android:layout_height="36dp"
                        android:contentDescription="@string/amount_of_time"
                        android:stepSize="1"
                        app:haloRadius="12dp"
                        app:labelBehavior="gone"
                        app:thumbRadius="6dp"
                        app:tickColor="@color/white" />

                    <TextView
                        android:id="@+id/selected_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingEnd="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/typego_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/submenu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/dictionary_type"
                    app:drawableStartCompat="@drawable/ic_dictionary_type" />

                <com.tetsoft.typego.gamesetup.presentation.DictionaryTypeRadioGroup
                    android:id="@+id/dictionary_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hapticFeedbackEnabled="true">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:buttonTint="?attr/colorPrimary"
                        android:fontFamily="@font/redring_regular"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="48dp"
                        android:text="@string/basic"
                        android:textSize="16sp" />

                    <RadioButton

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:buttonTint="?attr/colorPrimary"
                        android:fontFamily="@font/redring_regular"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="48dp"
                        android:text="@string/enhanced"
                        android:textSize="16sp" />
                </com.tetsoft.typego.gamesetup.presentation.DictionaryTypeRadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dictionary_type_note" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/typego_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/submenu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/seed"
                    app:drawableStartCompat="@drawable/ic_seed" />

                <EditText
                    android:id="@+id/et_seed"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/text_input"
                    android:hint="@string/seed_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="40"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seed_description" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/typego_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/submenu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/text_suggestions"
                    app:drawableStartCompat="@drawable/ic_suggestions" />

                <CheckBox
                    android:id="@+id/text_suggestions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-8dp"
                    android:layout_marginBottom="8dp"
                    android:buttonTint="?attr/colorPrimary"
                    android:checked="true"
                    android:fontFamily="@font/redring_regular"
                    android:hapticFeedbackEnabled="true"
                    android:minHeight="48dp"
                    android:text="@string/activate"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/text_suggestions_note" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/typego_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/submenu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/screen_orientation"
                    app:drawableStartCompat="@drawable/ic_rotation" />

                <com.tetsoft.typego.gamesetup.presentation.ScreenOrientationRadioGroup
                    android:id="@+id/screen_orientation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:buttonTint="?attr/colorPrimary"
                        android:fontFamily="@font/redring_regular"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="48dp"
                        android:text="@string/portrait"
                        android:textSize="16sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:buttonTint="?attr/colorPrimary"
                        android:fontFamily="@font/redring_regular"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="48dp"
                        android:text="@string/landscape"
                        android:textSize="16sp" />
                </com.tetsoft.typego.gamesetup.presentation.ScreenOrientationRadioGroup>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>