<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AccountFragment">

    <TextView
        android:id="@+id/activity_account_title"
        style="@style/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_account"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/accountNestedScrollView"
        style="@style/scrollbars"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_account_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/account_guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/account_guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />


            <LinearLayout
                android:id="@+id/infoBodyLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/account_guideline_right"
                app:layout_constraintStart_toStartOf="@id/account_guideline_left"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvAssessment"
                    style="@style/submenu_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/assessment"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/spinner_background"
                    android:elevation="8dp"
                    android:padding="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_language" />

                        <com.tetsoft.typego.ui.custom.LanguageSpinner
                            android:id="@+id/spinnerResultsLanguageSelection"
                            android:layout_width="210dp"
                            android:layout_height="30dp"
                            android:paddingHorizontal="4dp"
                            android:paddingVertical="1dp" />
                    </LinearLayout>

                </RelativeLayout>


                <androidx.cardview.widget.CardView
                    style="@style/basic_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@color/cardview_main_dark_gray">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/tvAverageWPM"
                            style="@style/list_fields"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:drawablePadding="8dp"
                            android:text="@string/average_wpm"
                            app:drawableLeftCompat="@drawable/ic_keyboard" />

                        <TextView
                            android:id="@+id/tvBestResult"
                            style="@style/list_fields"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:drawablePadding="8dp"
                            android:text="@string/best_result"
                            app:drawableStartCompat="@drawable/ic_star" />

                        <TextView
                            android:id="@+id/tvAccountLastResult"
                            style="@style/list_fields"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:drawablePadding="8dp"
                            android:text="@string/last_result"
                            app:drawableStartCompat="@drawable/ic_prev_res" />

                        <TextView
                            android:id="@+id/tvTestsPassed"
                            style="@style/list_fields"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:drawablePadding="8dp"
                            android:text="@string/tests_passed"
                            app:drawableStartCompat="@drawable/ic_times_played" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.1dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/white"
                            android:visibility="gone" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/submenu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/passed_tests" />

                <TextView
                    android:id="@+id/tvPassedTestsInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/msg_nothing_to_show"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_passed_tests"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/passed_tests_item" />

                <TextView
                    android:id="@+id/tvLeaveFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/leave_a_feedback"
                    android:textColor="@color/main_green"
                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>